--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+python-dotenv
 torch>=2.2.0
 transformers>=4.32.0
-datasets
+datasets>=2.16.0
 bitsandbytes>=0.39.0
-accelerate
-python-dotenv
+accelerate>=0.26.1
+evaluate>=0.4.1
 jinja2>=3.0.0
