--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# PDM
+.pdm-python
+pdm.lock
+
+# Azure ML
 .amlignore*
 *.amltmp
 .ipynb_aml_checkpoints
 .model/
+
