--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 python-dotenv
 torch>=2.2.0
-transformers>=4.32.0
+transformers==4.39.1
 datasets>=2.16.0
 bitsandbytes>=0.39.0
 accelerate>=0.26.1
 evaluate>=0.4.1
 jinja2>=3.0.0
+mlflow>=2.8.0
