--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-dotenv
 torch>=2.2.0
+torchmetrics
 transformers==4.39.1
 datasets>=2.16.0
 bitsandbytes>=0.39.0
@@ -8,3 +9,4 @@ evaluate>=0.4.1
 jinja2>=3.0.0
 mlflow>=2.8.0
 tqdm
+wandb
