--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "torch>=2.2.0",
     "transformers>=4.39.1",
     "datasets>=2.16.0",
+    "trl>=0.8.1",
     "bitsandbytes==0.42.0",
     "accelerate>=0.28.0",
     "evaluate>=0.4.1",
