--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "transformers>=4.39.1",
     "datasets>=2.16.0",
     "trl>=0.8.1",
+    "peft>=0.10.0",
     "bitsandbytes==0.42.0",
     "accelerate>=0.28.0",
     "evaluate>=0.4.1",
