--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ python-dotenv
 torch>=2.2.0
 transformers==4.39.1
 datasets>=2.16.0
-trl
+trl>=0.8.1
+peft>=0.10.0
 bitsandbytes>=0.39.0
 accelerate>=0.26.1
 evaluate>=0.4.1
 jinja2>=3.0.0
 mlflow>=2.8.0
 tqdm
-wandb
+wandb>=0.16.5
+
