install ocr dependencies and notebook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@
 dependencies = [
     "python-dotenv",
     "torch>=2.2.0",
+    "torchvision>=0.9.1",
     "transformers>=4.39.1",
     "datasets>=2.16.0",
     "trl>=0.8.1",
@@ -15,5 +16,6 @@ dependencies = [
     "jinja2>=3.0.0",
     "jupyter>=1.0.0",
     "wandb>=0.16.5",
+    "pytesseract>=0.3.10"
 ]
 requires-python = ">=3.11"
