--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-dotenv
 torch>=2.2.0
+torchvision>=0.9.1
 transformers==4.39.1
 datasets>=2.16.0
 trl>=0.8.1
@@ -11,4 +12,5 @@ jinja2>=3.0.0
 mlflow>=2.8.0
 tqdm
 wandb>=0.16.5
+pytesseract>=0.3.10
 
